# Browser4-base

./: .aider.conf.yml  .gitignore  AGENTS.md  CALL_CHAIN_VISUALIZATION.md  CLAUDE.md  CODE_REVIEW_BrowserPerceptiveAgent.md  COROUTINES_CONVERSION_SUMMARY.md  EVENTBUS_IMPLEMENTATION_SUMMARY.md  PULL_REQUEST.md  README.md  README.zh.md  TESTING.md  VERSION  application.properties  maven-version-rules.xml  output.txt  package-lock.json  pom.xml
.claude/: settings.local.json
sdks/browser4-cli/: Cargo.toml  README.md  browser4-cli.sh  install.ps1  install.sh  jest.config.js  package-lock.json  package.json
sdks/browser4-cli/src/: args.rs  cli.ts  commands.rs  daemon.rs  help.rs  http.rs  main.rs  managed_processes.rs  program.ts  state.rs  state.ts  utilsBundle.ts
sdks/browser4-cli/src/cli/daemon/: command.ts  commands.ts  daemon.ts  helpGenerator.ts
sdks/browser4-cli/src/mcp/: exports.ts
sdks/browser4-cli/src/mcp/sdk/: http.ts
sdks/browser4-cli/src/server/utils/: network.ts
sdks/browser4-cli/tests/: cli.test.ts  commands.test.ts  e2e.rs  program.test.ts
sdks/browser4-cli/tests/__mocks__/: mcpBundle.ts
sdks/browser4-python/: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  setup.cfg
sdks/browser4-python/browser4/: README.md  client.py  driver.py  models.py  webdriver.py
sdks/browser4-python/docs/: DOCUMENTATION_COMPLETE.md  build.ps1  build.sh  deploy.sh  mkdocs.yml  serve.ps1  serve.sh
sdks/browser4-python/docs-dev/: RELEASE_PLAN.en.md  RELEASE_PLAN.md  RELEASE_QUICKREF.md
sdks/browser4-python/docs/docs/: changelog.md  faq.md  index.md
sdks/browser4-python/docs/docs/api/: agentic-session.md  browser4-driver.md  pulsar-client.md  pulsar-session.md  webdriver.md
sdks/browser4-python/docs/docs/configuration/: environment-variables.md  remote-server.md
sdks/browser4-python/docs/docs/examples/: ai-automation.md  basic-usage.md  complete-workflow.md
sdks/browser4-python/docs/docs/getting-started/: first-steps.md  installation.md  quick-start.md
sdks/browser4-python/examples/: basic_usage.py  driver_usage.py  fused_acts_style_example.py  webdriver_example.py
sdks/browser4-python/scripts/: README.md  bump-version.py  release.sh
sdks/browser4-python/tests/: ARCHITECTURE.md  IMPLEMENTATION.md  README.md  SUMMARY.md  conftest.py  smoke_test.py  test_agentic_session_comprehensive.py  test_driver.py  test_integration.py  test_urls.py  test_webdriver_comprehensive.py  verify_test_setup.py
sdks/browser4-sdk-rust/: Cargo.toml  README.md
(+1626 files in other folders)
