[package]
name = "browser4-cli"
version = "0.1.0"
edition = "2021"
autotests = false
description = "Browser4 CLI — control a Browser4 server from the command line"
authors = ["Platon AI <opensource@platon.ai>"]
license = "Apache-2.0"

[[bin]]
name = "browser4-cli"
path = "src/main.rs"

[lib]
name = "browser4_cli"
path = "src/lib.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["full"] }
dirs = "5"
base64 = "0.22"
chrono = "0.4"
regex = { version = "1.5.5" }

[dev-dependencies]
tempfile = "3"
