[package]
name = "browser4-sdk-rust"
version = "4.6.0-SNAPSHOT"
edition = "2021"
authors = ["Vincent Zhang <ivincent.zhang@gmail.com>"]
license = "Apache-2.0"
description = "Rust SDK for Browser4 based on OpenAPI specification"
homepage = "https://browser4.io"
repository = "https://github.com/platonai/Browser4"
documentation = "https://docs.rs/browser4-sdk-rust"
readme = "README.md"
keywords = ["browser", "automation", "scraping", "ai", "webdriver"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTML parsing
scraper = "0.19"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# SSE client
eventsource-client = "0.12"

# Logging
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
env_logger = "0.11"

[lib]
name = "browser4"
path = "src/lib.rs"
